adding updated project w/working login/LogOut

--- a/Project1/Views/Error/Error.cshtml
+++ b/Project1/Views/Error/Error.cshtml
@@ -3,4 +3,4 @@
     Layout = null;
 }
 <h2>Error</h2>
-<p>A system error has been detected. A notification has been sent to the development team.</p>
+<p>A system error has been detected. Contact Nell Brisard and he'll fix it ASAP.</p>
