--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -25,8 +25,7 @@
         <h1>The Learning Center</h1>
         <h4>The place for technology classes.</h4>
         <div class="btn btn-warning">
-            @Html.ActionLink("Learn more >>", "RsvpForm")
-
+            @Html.ActionLink("Learn more >>", "Index")
         </div>
     </div>
     <br />
@@ -37,11 +36,11 @@
     </div>
     <table>
         <tr>
-            <td>@Html.ActionLink("Class List", "RsvpForm")</td>
+            <td>@Html.ActionLink("Class List", "Classlist")</td>
             <td style="padding:20px"></td>
             <td>@Html.ActionLink("Your enrolled classes", "RsvpForm")</td>
             <td style="padding:20px"></td">
-            <td>@Html.ActionLink("Enroll in a class", "RsvpForm")</td>
+            <td>@Html.ActionLink("Enroll in a class", "enrollinclass")</td>
         </tr>
         <tr>
             <td><h6>See all of our class offerings</h6></td>
