--- a/Project1/Content/bootstrap.css
+++ b/Project1/Content/bootstrap.css
@@ -6804,3 +6804,25 @@ td.visible-print {
     display: none !important;
   }
 }
+
+.field-validation-error {
+    color: #f00;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 1px solid #f00;
+    background-color: #fee;
+}
+
+.validation-summary-errors {
+    font-weight: bold;
+    color: #f00;
+}
+
+.validation-summary-valid {
+    display: none;
+}
