fixing broken project

--- a/Project1/Views/Error/Error.cshtml
+++ b/Project1/Views/Error/Error.cshtml
@@ -1,6 +1,26 @@
-﻿@{
-    ViewBag.Title = "title";
-    Layout = null;
-}
-<h2>Error</h2>
-<p>A system error has been detected. Contact Nell Brisard and he'll fix it ASAP.</p>
+﻿@{ ViewBag.Title = "Error";
+                Layout = null; }
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Login</title>
+
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <style>
+        .btn a {
+            color: white;
+            text-decoration: none;
+        }
+
+        body {
+            background-color: #f1f1f1;
+        }
+    </style>
+</head>
+<body>
+    <h2>Error</h2>
+    <p>A system error has been detected. Contact Nell Brisard and he'll fix it ASAP.</p>
+</body>
+</html>
