--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -36,9 +36,9 @@
     </div>
     <table>
         <tr>
-            <td>@Html.ActionLink("Class List", "Classlist")</td>
+            <td>@Html.ActionLink("Class List", "Products")</td>
             <td style="padding:20px"></td>
-            <td>@Html.ActionLink("Your enrolled classes", "RsvpForm")</td>
+            <td>@Html.ActionLink("Your enrolled classes", "enrollments")</td>
             <td style="padding:20px"></td">
             <td>@Html.ActionLink("Enroll in a class", "enrollinclass")</td>
         </tr>
