--- a/Project1/Views/Home/_DELETERegisterForm.cshtml
+++ b/Project1/Views/Home/_DELETERegisterForm.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model HelloWorld.Models.LogOnModel
+@model HelloWorld.Models.LoginModel
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
 <!DOCTYPE html>
 
