--- a/Project1/Views/Home/_DELETE_Login.cshtml
+++ b/Project1/Views/Home/_DELETE_Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model HelloWorld.Models.LogOnModel
+﻿@model HelloWorld.Models.LoginModel
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
 <!DOCTYPE html>
 <html>
