--- a/Project1/Views/Home/LogOn.cshtml
+++ b/Project1/Views/Home/LogOn.cshtml
@@ -1,7 +1,7 @@
-﻿@model HelloWorld.Models.LogOnModel
+﻿@model HelloWorld.Models.LoginModel
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
-
 @{ ViewBag.Title = "Log On"; }
+
 <!DOCTYPE html>
 
 <html>
@@ -21,10 +21,6 @@
         }
     </style>
 </head>
-
-
-
-
 <script src="@Url.Content("~/Scripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
 <script type="text/javascript">
     $(function () {
