--- a/Project1/Views/_BasicLayout.cshtml
+++ b/Project1/Views/_BasicLayout.cshtml
@@ -9,6 +9,7 @@
     <header>
         <table>
             <tr>
+                <td style="padding:30px"></td>
                 <td>
                     <div class="btn btn-info">
                         @Html.ActionLink("Home", "Index")
@@ -37,7 +38,7 @@
             @Html.ActionLink("Log Out", "LogOut") }
         else
         {
-@Html.ActionLink("Log in", "LogOn")}
+            @Html.ActionLink("Log in", "LogOn")}
                     </div>
                 </td>
                 <td>
