--- a/Project1/HelloWorld/Views/Home/Products.cshtml
+++ b/Project1/HelloWorld/Views/Home/Products.cshtml
@@ -1,23 +1,45 @@
 ﻿@model HelloWorld.Models.Product[]
 
-@{
-    ViewBag.MyLittleTitle = "Little Products";
-    Layout = "~/Views/_BasicLayout.cshtml";
-}
+@{ Layout = "~/Views/_BasicLayout.cshtml"; }
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Classes</title>
+
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <style>
+        .btn a {
+            color: white;
+            text-decoration: none;
+        }
+
+        body {
+            background-color: #f1f1f1;
+        }
+    </style>
+</head>
 
 @if (Model.Length > 0)
 {
-    <table>
+<table>
+    <tr>
+        <th>Name</th>
+        <td style="padding:25px"></td>
+        <th>Description</th>
+        <td style="padding:25px"></td>
+        <th>Price</th>
         @foreach (var product in Model)
         {
-            <tr>
-                <td>@product.Name</td>
-                <td>@product.Price</td>
-            </tr>
-        }
-    </table>
-}
-else
-{
-    <h2>No product data found.</h2>
-}
+<tr>
+        <td>@product.Name</td>
+        <td style="padding:25px"></td>
+        <td>@product.Description</td>
+        <td style="padding:25px"></td>
+        <td>@product.Price</td>
+    </tr>}
+    </table> }
+                else
+                {
+    <h2>No product data found.</h2>}
