--- a/Project1/Views/Home/LogOn.cshtml
+++ b/Project1/Views/Home/LogOn.cshtml
@@ -4,10 +4,9 @@
 
 <!DOCTYPE html>
 
-<html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Log On</title>
+    <title>Classes</title>
 
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <style>
@@ -20,6 +19,9 @@
             background-color: #f1f1f1;
         }
     </style>
+    <h1>
+        Log On
+    </h1>
 </head>
 <script src="@Url.Content("~/Scripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
 <script type="text/javascript">
@@ -27,10 +29,6 @@
         $("input[type=text]").first().focus();
     });
 </script>
-<p>
-    Please enter your user name and password. @Html.ActionLink("Register", "Register")
-    if you don't have an account.
-</p>
 
 @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
 
@@ -53,16 +51,11 @@
         @Html.ValidationMessageFor(m => m.Password)
         </div>
 
-        <div class="editor-label">
-        @Html.CheckBoxFor(m => m.RememberMe)
-        @Html.LabelFor(m => m.RememberMe)
-        </div>
-
         <p>
-        <input class="btn btn-success" type="submit" value="Log On" />
+        <input class="btn btn-success" type="submit" value="Log in" />
         </p>
+        <p>For testing use email=mike@test.com & password=password</p>
         <p>
-        Forgot your password? Click @Html.ActionLink("here", "ResetPassword") to reset your
-        password.
+        @Html.ActionLink("Register a new user", "Register")
         </p>
 }
