--- a/Project1/Views/Home/Products.cshtml
+++ b/Project1/Views/Home/Products.cshtml
@@ -26,15 +26,19 @@
 <table>
     <tr>
         <th>Name</th>
+        <td style="padding:25px"></td>
         <th>Description</th>
+        <td style="padding:25px"></td>
         <th>Price</th>
         @foreach (var product in Model)
         {
 <tr>
-    <td>@product.Name</td>
-    <td>@product.Description</td>
-    <td>@product.Price</td>
-</tr>}
+        <td>@product.Name</td>
+        <td style="padding:25px"></td>
+        <td>@product.Description</td>
+        <td style="padding:25px"></td>
+        <td>@product.Price</td>
+    </tr>}
     </table> }
                 else
                 {
