--- a/Project1/Views/Home/Register.cshtml
+++ b/Project1/Views/Home/Register.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model HelloWorld.Models.LoginModel
+﻿@model HelloWorld.Models.UserModel
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
 <!DOCTYPE html>
 <html>
@@ -22,14 +21,16 @@
 <body>
     @using (Html.BeginForm())
     {
-        @Html.ValidationSummary()
+        @Html.ValidationSummary(true, "Registration was unsuccessful. Please correct the errors and try again.")
         <div>
             <h1>Register.</h1>
             <h6>Create a new account.</h6>
         </div>
         <p>
-            <label>Email</label> @Html.TextBoxFor(t => t.Email,
-new { @class = "form-control", maxlength = 30, style = "width:200px;" })
+            <div class="editor-field">
+                @Html.TextBoxFor(m => m.Email)
+                @Html.ValidationMessageFor(m => m.Email)
+            </div>
         </p>
         <p>
             <label>Password</label> @Html.PasswordFor(t => t.Password,
@@ -42,8 +43,5 @@ new { @class = "form-control", maxlength = 30, style = "width:200px;" })
         </p>
         <input class="btn btn-success" type="submit" value="Register" />}
     <br />
-    <div class="btn btn-warning">
-        @Html.ActionLink("Register a new user", "RsvpForm")
-    </div>
 </body>
 </html>
