Cleaning up view files

--- a/Project1/Views/Home/LogOn.cshtml
+++ b/Project1/Views/Home/LogOn.cshtml
@@ -1,4 +1,4 @@
-﻿@model HelloWorld.Models.LoginModel
+﻿@model HelloWorld.Models.LogOnModel
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
 @{ ViewBag.Title = "Log On"; }
 
