--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -36,11 +36,11 @@
     </div>
     <table>
         <tr>
-            <td>@Html.ActionLink("Class List", "Products")</td>
+            <td>@Html.ActionLink("Class List", "Classlist")</td>
             <td style="padding:20px"></td>
-            <td>@Html.ActionLink("Your enrolled classes", "enrollments")</td>
+            <td>@Html.ActionLink("Your enrolled classes", "Enrollments")</td>
             <td style="padding:20px"></td">
-            <td>@Html.ActionLink("Enroll in a class", "enrollinclass")</td>
+            <td>@Html.ActionLink("Enroll in a class", "Enrollinclass")</td>
         </tr>
         <tr>
             <td><h6>See all of our class offerings</h6></td>
