--- a/Project1/Views/Home/Index.cshtml
+++ b/Project1/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
         <tr>
             <td>@Html.ActionLink("Class List", "Classlist")</td>
             <td style="padding:20px"></td>
-            <td>@Html.ActionLink("Your enrolled classes", "Enrollments")</td>
+            <td>@Html.ActionLink("Your enrolled classes", "StudentClasses")</td>
             <td style="padding:20px"></td">
             <td>@Html.ActionLink("Enroll in a class", "Enrollinclass")</td>
         </tr>
