Cleaning up unused controllers. Fixing minor bug in logon page string

--- a/Project1/SimpleCstructor/Views/Home/LogOn.cshtml
+++ b/Project1/SimpleCstructor/Views/Home/LogOn.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SimpleCstructor.Models.LogOnModel
 
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
-@{ ViewBag.Title = "Register"; }
+@{ ViewBag.Title = "Login"; }
 
 <!DOCTYPE html>
 
