--- a/Project1/SimpleCstructor/Views/Home/LogOn.cshtml
+++ b/Project1/SimpleCstructor/Views/Home/LogOn.cshtml
@@ -1,13 +1,13 @@
 ﻿@model SimpleCstructor.Models.LogOnModel
-
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
 @{ ViewBag.Title = "Login"; }
+@{ ViewBag.Message = ""; }
 
 <!DOCTYPE html>
 
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Login</title>
+    <title>@ViewBag.Title</title>
 
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <style>
@@ -20,9 +20,8 @@
             background-color: #f1f1f1;
         }
     </style>
-    <h1>
-        Login
-    </h1>
+    <h1>@ViewBag.Title</h1>
+    <h2>@ViewBag.Message</h2>
 </head>
 <body>
 
@@ -35,9 +34,7 @@
         </div>
 
         <div class="form-horizontal">
-            <h4>Create a new account.</h4>
-
-            <hr />
+                       <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.UserEmail, htmlAttributes: new { @class = "control-label col-md-2" })
