--- a/Project1/SimpleCstructor/Views/Home/Studentclasses.cshtml
+++ b/Project1/SimpleCstructor/Views/Home/Studentclasses.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<SimpleCstructor.Class>
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
-@{ ViewBag.Title = "Classlist"; }
+@{ ViewBag.Title = "Student Classes"; }
 @{ ViewBag.Message = ""; }
 
 <!DOCTYPE html>
