--- a/Project1/SimpleCstructor/Views/Home/Enrollinclass.cshtml
+++ b/Project1/SimpleCstructor/Views/Home/Enrollinclass.cshtml
@@ -2,7 +2,7 @@
 
 @{ Layout = "~/Views/_BasicLayout.cshtml"; }
 @{ ViewBag.Title = "Enroll in Class"; }
-@{ ViewBag.Message = "The place for technology classes."; }
+@{ ViewBag.Message = ""; }
 
 <!DOCTYPE html>
 
@@ -21,9 +21,8 @@
             background-color: #f1f1f1;
         }
     </style>
-    <h1>
-        Enroll In Class
-    </h1>
+    <h1>@ViewBag.Title</h1>
+    <h2>@ViewBag.Message</h2>
 </head>
 <body>
     @using (Html.BeginForm())
