Minor layout fixes

--- a/Project1/SimpleCstructor/Views/_BasicLayout.cshtml
+++ b/Project1/SimpleCstructor/Views/_BasicLayout.cshtml
@@ -10,6 +10,8 @@
         <table>
             <tr>
                 <td style="padding:30px"></td>
+                <td><h3>Learning Center</h3></td>
+                <td style="padding:10px"></td>
                 <td>
                     <div class="btn btn-info">
                         @Html.ActionLink("Home", "Index")
